src/objects/Loaner__c/fields/RSM_PLM_Finisar__c.field-meta.xml
<CustomField>
    <fullName>RSM_PLM_Finisar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RSM Finisar</description>
    <label>RSM Finisar</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>startsWith</operation>
            <value>RSM</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>startsWith</operation>
            <value>VP</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Loaners</relationshipName>
    <type>Lookup</type>
</CustomField>