src/objects/Loaner__c/fields/RSMEmail__c.field-meta.xml
<CustomField>
    <fullName>RSMEmail__c</fullName>
    <formula>RSM_PLM_Approval__r.FirstName +&apos; &apos;+RSM_PLM_Approval__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RSM Email</label>
    <type>Text</type>
</CustomField>