src/objects/Loaner__c/fields/RSMFinisarActiveCheck__c.field-meta.xml
<CustomField>
    <fullName>RSMFinisarActiveCheck__c</fullName>
    <formula>RSM_PLM_Finisar__r.IsActive</formula>
    <label>RSMFinisarActiveCheck</label>
    <type>Checkbox</type>
</CustomField>