src/objects/Loaner__c/fields/SalesRepFirmGroup__c.field-meta.xml
<CustomField>
    <fullName>SalesRepFirmGroup__c</fullName>
    <formula>Firm_Name_Sales_rep__r.Legacy_Id__c</formula>
    <label>SalesRepFirmGroup</label>
    <type>Text</type>
</CustomField>