src/objects/Loaner__c/fields/Shipping_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Instructions__c</fullName>
    <label>Shipping Instructions</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>