src/objects/Loaner__c/fields/Since_receiving_loaners_what_have_we_d__c.field-meta.xml
<CustomField>
    <fullName>Since_receiving_loaners_what_have_we_d__c</fullName>
    <description>Since receiving loaners, what have we done with them?</description>
    <inlineHelpText>Since receiving loaners, what have we done with them?</inlineHelpText>
    <label>Since receiving loaners,What we done</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>