src/objects/Loaner__c/fields/SO_Auto_update_flag__c.field-meta.xml
<CustomField>
    <fullName>SO_Auto_update_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SO Auto update flag</label>
    <type>Checkbox</type>
</CustomField>