src/objects/Loaner__c/fields/SO_Number__c.field-meta.xml
<CustomField>
    <fullName>SO_Number__c</fullName>
    <formula>Order__r.PoNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SO Number</label>
    <type>Text</type>
</CustomField>