src/objects/Loaner__c/fields/SO_Pending_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>SO_Pending_Reminder_Date__c</fullName>
    <description>It is used to check when SO Pending Loaner Reminder Email should be sent</description>
    <label>SO Pending Reminder Date</label>
    <type>Date</type>
</CustomField>