src/objects/Loaner__c/fields/State_ship_to__c.field-meta.xml
<CustomField>
    <fullName>State_ship_to__c</fullName>
    <formula>Address_ship_to__r.ShippingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>