src/objects/Loaner__c/fields/SVP__c.field-meta.xml
<CustomField>
    <fullName>SVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Loaners2</relationshipName>
    <type>Lookup</type>
</CustomField>