src/objects/Loaner__c/fields/SVP_Id_Created_By__c.field-meta.xml
<CustomField>
    <fullName>SVP_Id_Created_By__c</fullName>
    <formula>IF( ISBLANK(RSM_PLM_Approval__r.SVP__c) ,  RSM_PLM_Finisar__c ,  RSM_PLM_Finisar__r.SVP__c )</formula>
    <label>SVP Id Created By</label>
    <type>Text</type>
</CustomField>