src/objects/Loaner__c/fields/Tel_Number__c.field-meta.xml
<CustomField>
    <fullName>Tel_Number__c</fullName>
    <formula>RSM_PLM_Finisar__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tel Number-Do Not Use</label>
    <type>Text</type>
</CustomField>