src/objects/Loaner__c/fields/Tel_Number_text__c.field-meta.xml
<CustomField>
    <fullName>Tel_Number_text__c</fullName>
    <label>Tel Number</label>
    <type>Phone</type>
</CustomField>