src/objects/Loaner__c/fields/Tel_NumberOLD__c.field-meta.xml
<CustomField>
    <fullName>Tel_NumberOLD__c</fullName>
    <label>Tel NumberOLD</label>
    <type>Phone</type>
</CustomField>