src/objects/Loaner__c/fields/Total_Production_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Production_Price__c</fullName>
    <label>Total Production Price</label>
    <summarizedField>Loaner_Line__c.Production_Price_ASP__c</summarizedField>
    <summaryForeignKey>Loaner_Line__c.Loaner__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>