src/objects/Loaner__c/fields/Verified_with_Betty_Dea__c.field-meta.xml
<CustomField>
    <fullName>Verified_with_Betty_Dea__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Review with Betty first before selecting [Loaner Ship From] = &quot;Returned Loaner Stock&quot; or &quot;Other&quot;.</inlineHelpText>
    <label>Verified with Betty Dea</label>
    <type>Checkbox</type>
</CustomField>