src/objects/Loaner__c/fields/VP_PLD_Finisar__c.field-meta.xml
<CustomField>
    <fullName>VP_PLD_Finisar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Populated after submitted for approval</inlineHelpText>
    <label>VP</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>startsWith</operation>
            <value>VP</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Loaners_Vp</relationshipName>
    <type>Lookup</type>
</CustomField>