src/objects/Loaner__c/fields/VP_PLD_ID_Created_By__c.field-meta.xml
<CustomField>
    <fullName>VP_PLD_ID_Created_By__c</fullName>
    <formula>RSM_PLM_Approval__r.VP__c</formula>
    <label>VP/PLD ID Created By</label>
    <type>Text</type>
</CustomField>