src/objects/Loaner__c/fields/What_engineering_tests_have_been_done__c.field-meta.xml
<CustomField>
    <fullName>What_engineering_tests_have_been_done__c</fullName>
    <description>What engineering tests have been done?</description>
    <inlineHelpText>What engineering tests have been done?</inlineHelpText>
    <label>What engineering tests have been done?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>