src/objects/Loaner__c/fields/What_engineering_tests_still_need_to_be__c.field-meta.xml
<CustomField>
    <fullName>What_engineering_tests_still_need_to_be__c</fullName>
    <description>What engineering tests still need to be done?</description>
    <inlineHelpText>What engineering tests still need to be done?</inlineHelpText>
    <label>What engineering tests still need to be</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>