src/objects/Loaner__c/fields/What_is_the_real_expected_date_for_quali__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_real_expected_date_for_quali__c</fullName>
    <description>What is the real expected date for qualification?</description>
    <inlineHelpText>What is the real expected date for qualification?</inlineHelpText>
    <label>Real Expected Date For Qualification</label>
    <type>Date</type>
</CustomField>