src/objects/Loaner__c/recordTypes/Loaner_Extension.recordType-meta.xml
<RecordType>
    <fullName>Loaner_Extension</fullName>
    <active>true</active>
    <description>Do Not Select this</description>
    <label>Loaner Extension</label>
</RecordType>