src/objects/Loaner__c/recordTypes/Loaner_Extension_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Loaner_Extension_Read_Only</fullName>
    <active>true</active>
    <description>Do Not Select this</description>
    <label>Loaner Extension Read Only</label>
</RecordType>