src/objects/Loaner__c/recordTypes/Loaner_Pending_Sales_Order.recordType-meta.xml
<RecordType>
    <fullName>Loaner_Pending_Sales_Order</fullName>
    <active>true</active>
    <label>Loaner Pending Sales Order</label>
</RecordType>