src/objects/Loaner__c/recordTypes/Loaner_Request_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Loaner_Request_Read_Only</fullName>
    <active>true</active>
    <description>Do not Select this</description>
    <label>Loaner Request Read Only</label>
</RecordType>