src/objects/Loaner__c/validationRules/New_OpportunityMiscValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>New_OpportunityMiscValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Opportunity_Type__c , &apos;Not New Opportunity - Misc&apos;),RecordType.Name == &apos;Loaner Request&apos;, ISBLANK( Notes__c ) )</errorConditionFormula>
    <errorDisplayField>Notes__c</errorDisplayField>
    <errorMessage>user should Enter Expalanation when Opportunity Type is &apos;Not New Opportunity -Misc&apos;</errorMessage>
</ValidationRule>