src/objects/Loaner__c/validationRules/requireAccountManagerifDistributorRep.validationRule-meta.xml
<ValidationRule>
    <fullName>requireAccountManagerifDistributorRep</fullName>
    <active>true</active>
    <description>requireAccountManagerif Disti Rep Firm is not blank</description>
    <errorConditionFormula>AND( NOT(ISBLANK(   Firm_Name_Distributor__c )), 
ISBLANK(  AC_Mgr_Distributor__c  ) ,
 ISNULL( Loaner_Legacy_ID__c ) 



)</errorConditionFormula>
    <errorDisplayField>AC_Mgr_Distributor__c</errorDisplayField>
    <errorMessage>require Account Manager if Distributor Rep Firm Name is not blank</errorMessage>
</ValidationRule>