src/objects/Loaner__c/validationRules/requireAccountManagerifSalesRepFirm.validationRule-meta.xml
<ValidationRule>
    <fullName>requireAccountManagerifSalesRepFirm</fullName>
    <active>true</active>
    <description>require Account Manager if Sales Rep Firm Name is not blank</description>
    <errorConditionFormula>AND( NOT(ISBLANK( Firm_Name_Sales_rep__c )),
      ISBLANK( AC_Mgr_Sales_rep__c ) 
,ISNULL( Loaner_Legacy_ID__c ) 

)</errorConditionFormula>
    <errorDisplayField>AC_Mgr_Sales_rep__c</errorDisplayField>
    <errorMessage>A/C Manager to be filled if Sales Rep Firm is not blank</errorMessage>
</ValidationRule>