src/objects/Loaner__c/validationRules/requireECONumber.validationRule-meta.xml
<ValidationRule>
    <fullName>requireECONumber</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Loaner_Category__c , &apos;First Article loaner&apos;),RecordType.Name == &apos;Loaner Request&apos;, ISBLANK( ECO_Number__c ) )</errorConditionFormula>
    <errorDisplayField>ECO_Number__c</errorDisplayField>
    <errorMessage>ECO Number is mandatory</errorMessage>
</ValidationRule>