src/objects/Loaner__c/validationRules/requireExplanation.validationRule-meta.xml
<ValidationRule>
    <fullName>requireExplanation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK( Notes__c ) ,ISPICKVAL( Loaner_Ship_From_Finisar__c , &apos;Other&apos;),RecordType.Name == &apos;Loaner Request&apos;)</errorConditionFormula>
    <errorDisplayField>Notes__c</errorDisplayField>
    <errorMessage>user should enter Expalanation in Notes</errorMessage>
</ValidationRule>