src/objects/Loaner__c/validationRules/requireSOnumber.validationRule-meta.xml
<ValidationRule>
    <fullName>requireSOnumber</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK( Notes__c ) ,ISPICKVAL( Loaner_Ship_From_Finisar__c , &apos;Transfer From Existing Loaner&apos;),RecordType.Name = &apos;Loaner Request&apos;)</errorConditionFormula>
    <errorDisplayField>Notes__c</errorDisplayField>
    <errorMessage>user should enter SO number in notes</errorMessage>
</ValidationRule>