src/objects/Loaner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>SO_Number__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Company_Name_End_Cust__c</columns>
    <columns>RSM_PLM_Approval__c</columns>
    <columns>Firm_Name_Sales_rep__c</columns>
    <columns>Status_Approval__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Order__c</columns>
    <columns>Oracle_order_header_id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>