src/objects/Loaner__c/listViews/My_Loaner.listView-meta.xml
<ListView>
    <fullName>My_Loaner</fullName>
    <columns>NAME</columns>
    <columns>SO_Number__c</columns>
    <columns>Company_Name_Ship_To__c</columns>
    <columns>RSM_PLM_Approval__c</columns>
    <columns>Firm_Name_Sales_rep__c</columns>
    <columns>Status_Approval__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Loaner</label>
</ListView>